plugins {
    id("com.github.johnrengelman.shadow") version "6.1.0"
}

apply from: "$rootDir/gradle/shadow.gradle"

def relocatePackages = ext.relocatePackages

compileJava {
    sourceCompatibility = 8
    targetCompatibility = 8
}

dependencies {
    compileOnly("io.opentelemetry:opentelemetry-sdk:${versions.opentelemetry}")
    compileOnly("io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:${versions.opentelemetryAlpha}")
    compileOnly("io.opentelemetry.javaagent:opentelemetry-javaagent-extension-api:${versions.opentelemetryJavaagentAlpha}")
    compileOnly("io.opentelemetry.instrumentation:opentelemetry-instrumentation-api:${versions.opentelemetryJavaagentAlpha}")
    compileOnly("io.opentelemetry:opentelemetry-semconv:${versions.opentelemetryAlpha}")
    compileOnly deps.slf4j

    annotationProcessor deps.autoservice
    implementation deps.autoservice

    testCompile deps.slf4j
}

shadowJar {
    mergeServiceFiles()

    exclude '**/module-info.class'

    duplicatesStrategy = DuplicatesStrategy.FAIL

    relocatePackages(it)
}